Add gulp-sass autoprefixer watch

--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "gulp": "^4.0.2",
-    "gulp-sass": "^4.0.2"
-  }
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-sass": "^4.0.2",
+    "gulp-watch": "^5.0.1"
+  },
+  "browserslist": [
+    "defaults",
+    "IE 10"
+  ]
 }
